# pc-components-analysis

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  chat.py  compose.yaml  document.py  engine.py  entrypoint.sh  hello.py  main.py  ollama.Dockerfile  populate.py  pyproject.toml  repo.py  requirements.txt  settings.py  test.py
.streamlit/: config.toml
bot/static/: cpu.py  gpu.py  main.py
datasets/csv/: memory.csv
datasets/refined/: cpu.csv  hdd.csv  mainboard.csv  ram.csv  ssd.csv  vga.csv
db/migration/: 20240906062805_init.up.sql
documents/: cpu.txt  hdd.txt  mainboard.txt  ram.txt  ssd.txt  vga.txt
logs/: logcpu.txt  logharddrive.txt  logmainboard.txt  logram.txt  logvga.txt
parts/: __init__.py  base.py  cpu.py  hdd.py  mainboard.py  ram.py  ssd.py  vga.py
scraper/: __init__.py  web.py
templates/: cpu.txt  hdd.txt  mainboard.txt  ram.txt  ssd.txt  vga.txt
