[project]
name = "pc-components-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.6",
    "langchain>=0.3.1",
    "langchain-ollama>=0.2.0",
    "pandas>=2.2.3",
    "langchain-chroma>=0.1.4",
    "beautifulsoup4>=4.12.3",
    "crawl4ai>=0.3.72",
]
